# ==============================================================================
# AdminTools CMake File
# ==============================================================================

CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
#SET(CMAKE_VERBOSE_MAKEFILE ON)

# ==============================================================================
# install files ----------------------------------------------------------------
# ==============================================================================

ADD_SUBDIRECTORY(bin)

